Bug Fixe3s, start of building out sample

--- a/ConcurrentEngine/ConcurrentEngine/ConcurrentEngine.csproj
+++ b/ConcurrentEngine/ConcurrentEngine/ConcurrentEngine.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Slugent.ProcessQueueManager\Slugent.ProcessQueueManager.csproj" />
+    <ProjectReference Include="..\Slugent.ProcessQueueManager\ProcessQueueManager.csproj" />
   </ItemGroup>
 
 </Project>
