--- a/src/ConcurrentEngine/Test_ConcurrentEngine/Test_ConcurrentEngine.csproj
+++ b/src/ConcurrentEngine/Test_ConcurrentEngine/Test_ConcurrentEngine.csproj
@@ -1,11 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
 
-    <AssemblyVersion>1.0.0.5</AssemblyVersion>
+    <AssemblyVersion>1.0.4.0</AssemblyVersion>
+
+    <Version>1.0.4.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
